--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,15 @@ library(tidyverse)
 
 *As you complete tasks, you can ~~cross them out~~ by surrounding with `~~`.*
 
-* Have a look around the files here. Where are the R scripts? What are the directories `data` and `figs` for?
+* ~~Have a look around the files here. Where are the R scripts? What are the directories `data` and `figs` for?~~
+    * The $R$ files are located within the R directory.  
+        * There are 3 files - write, wrangle, and barcharts-packages-built
+            * Write creates a new dataset with the packages and stores it in data
+            * Wrangle forms the data and stores it in data
+            * Barcharts provides a visualization and stores it in figs
+    * The `data` folder contains the data for analysis - all csv files
+    * The `figs` folder contains a figure that outputs from
+
 * Notice that this README is an `.Rmd` file. That means it could contain R code and will need to be rendered to create `README.md`.
 * Open [R/01_write-installed-packages.R](R/01_write-installed-packages.R). Write the script as directed. Run it. Commit and push the current state.
 * Open [R/02_wrangle-packages.R](R/02_wrangle-packages.R). Fill in the missing pieces of the script as directed. Run it. Commit and push the current state.
